--- a/chatroom_Ai/members/templates/main.html
+++ b/chatroom_Ai/members/templates/main.html
@@ -23,7 +23,7 @@
     <div class="main__content">
         <div>
             <h2>Hello, welcome to my Chatroom app!</h2>
-            <a href="/members"><button>Get started</button></a>
+            <a href="/chat"><button>Get started</button></a>
         </div>
     </div>
 </body>
